--- a/package.json
+++ b/package.json
@@ -9,19 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-tabs": "^1.1.12",
-    "@tabler/icons-react": "^3.34.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "dotted-map": "^2.2.3",
-    "lucide-react": "^0.525.0",
-    "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.22.0",
     "next": "15.3.8",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-syntax-highlighter": "^15.6.1",
-    "tailwind-merge": "^3.3.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,11 +20,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
 }
